# vimana

./: .ergo_run.c  .gitignore  .yi_num_probe.yis_manifest  LICENSE  README.md  compile  compile.c  right_main.c  yi_num_probe  yi_num_probe.c
Uxn/: minesweeper.tal
adocs/: cogito_design_spec.md  cogito_spec.md  sum_spec.md
emu/: Makefile  vinasm  vinasm.c  vinemu  vinemu.c  vinrom.h
examples/: custom_fonts.yi  gui_gallery.yi  gui_hello.yi  rtl_demo.yi  yis.cogito.Gallery.cogresource.toml
extras/Abacus/: com.fyralabs.Abacus.cogresource.toml  main.yi
extras/Anthology/: anthology.sum  com.fyralabs.Anthology.cogresource.toml  main.yi  models.yi  settings.yi  state.yi
extras/Cal/: cal_date.yi  cal_events.yi  cal_font.yi  cal_input.yi  cal_main.yi  cal_model.yi  cal_view.yi
extras/Calc/: calc_chicago.yi  calc_font.yi  calc_icons.yi  calc_main.yi  calc_model.yi  calc_ops.yi  calc_tone.yi  calc_view.yi
extras/Casevo/: casevo_browser.yi  casevo_calc.yi  casevo_file.yi  casevo_font.yi  casevo_input.yi  casevo_main.yi  casevo_model.yi  casevo_view.yi
extras/Casu/: casu_edit.yi  casu_file.yi  casu_icons.yi  casu_main.yi  casu_model.yi  casu_style.yi  casu_themes.yi  casu_view.yi  io.github.lainsce.Casu.cogresource.toml  main.yi
extras/Corpus/: com.fyralabs.Corpus.cogresource.toml  main.yi
extras/Daisy/: daisy_font.yi  daisy_main.yi
extras/Draw/: draw_brush.yi  draw_canvas.yi  draw_file.yi  draw_font.yi  draw_line.yi  draw_main.yi  draw_menu.yi  draw_panel.yi  draw_tools.yi  draw_view.yi  draw_zoom.yi
extras/Enigma/: main.yi
extras/Fortnightly/: com.fyralabs.Fortnightly.cogresource.toml  fortnightly.sum  main.yi
extras/Hello/: hello_font.yi  hello_main.yi  (+1 more)
src/: cogito.ergo  cogito.inc  cogito.yi  cogito_dark.sum  cogito_default.sum  meson.build
src/c/: 00_core.inc  01_icons.inc  02_theme.inc  03_bidi.inc  03_text.inc  04_cam16.inc  05_datepicker.inc  06_timepicker.inc  07_colorpicker.inc  08_nodes.inc  09_layout.inc  10_interaction.inc  11_sum.inc  12_sum_cogito.inc  13_menu.inc  14_draw.inc  15_run.inc  vimana.c  vimana.h
src/c/backend/: backend.h  backend_sdl3.c  cocoa_autoreleasepool.mm  csd.h  csd_sdl3.c  font_dialog_macos.mm  mpris_macos.mm  print_macos.mm  svg_native_linux.c  svg_native_macos.mm
src/c/ensor/: ensor.inc  ensor_accent.inc  ensor_dynamic.inc  ensor_keycolor.inc  ensor_palette.inc  ensor_quantize.inc  ensor_schemes.inc  ensor_score.inc  ensor_temperature.inc
src/c/widgets/draw/: about_window.inc  active_indicator.inc  appbar.inc  avatar.inc  badge.inc  banner.inc  bin.inc  bottom_nav.inc  bottom_sheet.inc  button.inc  buttongroup.inc  card.inc  carousel.inc  carousel_item.inc  checkbox.inc  chip.inc  colorpicker.inc  content_list.inc  datepicker.inc  dialog.inc  dialog_slot.inc  divider.inc  drawing_area.inc  dropdown.inc  empty_page.inc  fab.inc  fab_menu.inc  fixed.inc  flow.inc  fontbutton.inc  grid.inc  hstack.inc  iconbtn.inc  image.inc  label.inc  list.inc  menu.inc  menu_section.inc  nav_rail.inc  popover.inc  (+38 more)
src/c/widgets/interaction/: about_window.inc  active_indicator.inc  appbar.inc  avatar.inc  badge.inc  banner.inc  bin.inc  bottom_nav.inc  bottom_sheet.inc  button.inc  buttongroup.inc  card.inc  carousel.inc  carousel_item.inc  checkbox.inc  chip.inc  colorpicker.inc  content_list.inc  context_menu.inc  datepicker.inc  dialog.inc  divider.inc  drawing_area.inc  dropdown.inc  empty_page.inc  fab.inc  fab_menu.inc  fixed.inc  flow.inc  fontbutton.inc  grid.inc  hstack.inc  iconbtn.inc  image.inc  label.inc  list.inc  menu_button.inc  menu_section.inc  nav_rail.inc  popover.inc  (+37 more)
src/c/widgets/interaction/focusable/: bottom_nav.inc  button.inc  buttongroup.inc  carousel.inc  carousel_item.inc  checkbox.inc  chip.inc  colorpicker.inc  datepicker.inc  dropdown.inc  fab.inc  fab_menu.inc  fontbutton.inc  iconbtn.inc  nav_rail.inc  searchfield.inc  slider.inc  stepper.inc  switch.inc  textfield.inc  textview.inc
src/c/widgets/intrinsic/: about_window.inc  active_indicator.inc  appbar.inc  avatar.inc  badge.inc  banner.inc  bin.inc  bottom_nav.inc  bottom_sheet.inc  button.inc  buttongroup.inc  card.inc  carousel.inc  carousel_item.inc  checkbox.inc  chip.inc  colorpicker.inc  content_list.inc  datepicker.inc  dialog.inc  dialog_slot.inc  divider.inc  drawing_area.inc  dropdown.inc  empty_page.inc  fab.inc  fab_menu.inc  fixed.inc  flow.inc  fontbutton.inc  grid.inc  hstack.inc  iconbtn.inc  image.inc  label.inc  list.inc  menu_section.inc  nav_rail.inc  popover.inc  progress.inc  (+32 more)
src/c/widgets/layout/: about_window.inc  active_indicator.inc  appbar.inc  avatar.inc  badge.inc  banner.inc  bin.inc  bottom_nav.inc  bottom_sheet.inc  button.inc  buttongroup.inc  card.inc  carousel.inc  carousel_item.inc  checkbox.inc  chip.inc  colorpicker.inc  content_list.inc  datepicker.inc  dialog.inc  dialog_slot.inc  divider.inc  drawing_area.inc  dropdown.inc  empty_page.inc  fab.inc  fab_menu.inc  fixed.inc  flow.inc  fontbutton.inc  grid.inc  hstack.inc  iconbtn.inc  image.inc  label.inc  list.inc  menu_section.inc  nav_rail.inc  popover.inc  progress.inc  (+35 more)
src/c/widgets/util/: app.inc  appbar.inc  async_task.inc  carousel_anim.inc  colorpicker.inc  datepicker.inc  draw_queue.inc  font_paths.inc  i18n.inc  image_load.inc  inspector.inc  node_api.inc  scrollbar.inc  shortcuts.inc  snarf.inc  style_dump.inc  sum_dynamic.inc  text_editing.inc  text_paragraphs.inc  text_spans.inc  theme_colors.inc  timepicker.inc  timer.inc  traffic_lights.inc  transition.inc  undo.inc  webview_render.inc
src/ergo/: cogito_bindings.inc  cogito_build.inc  cogito_codegen.inc  cogito_codegen_new_widgets.inc  cogito_resolve.inc
src/examples/: gui_gallery.ergo  gui_gallery.yi  gui_gallery.yis  gui_hello.ergo  gui_hello.yis
src/objc/: cocoa_autoreleasepool.mm
src/src/: cogito.c  cogito.h  ergo_compat.c  ergo_compat.h  vimana.c  vimana.h  yis_compat.c  yis_compat.h
src/yis/: cogito_bindings.inc  cogito_build.inc  cogito_codegen.inc  cogito_codegen_new_widgets.inc  cogito_packager.sh  cogito_resolve.inc  vimana.yi  vimana_bindings.inc  vimana_packager.sh
(+303 files in other folders)
